plugins {
  id "java"
  id "org.springframework.boot" version "2.7.5"
  id "io.spring.dependency-management" version "1.1.0"

  // Code Quality
  id "checkstyle"
  id "jacoco"
  id "org.sonarqube" version "4.2.0.3129"
}

group = "uk.nhs.hee.trainee.details"
version = "0.24.1"

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
    mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.4.4"
  }
}

dependencies {
  // Spring Boot
  implementation "org.springframework.boot:spring-boot-starter-data-redis"
  implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
  implementation "org.springframework.boot:spring-boot-starter-web"
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  implementation "org.springframework.boot:spring-boot-starter-validation"

  testImplementation "org.springframework.boot:spring-boot-starter-test"
  testImplementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
  testImplementation "com.playtika.testcontainers:embedded-redis:2.3.2"
  testImplementation "org.testcontainers:junit-jupiter:1.18.3"

  // Lombok
  compileOnly "org.projectlombok:lombok"
  annotationProcessor "org.projectlombok:lombok"

  // Mapstruct
  ext.mapstructVersion = "1.5.5.Final"
  implementation "org.mapstruct:mapstruct:${mapstructVersion}"
  annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  ext.mongockVersion = "5.3.0"
  implementation "io.mongock:mongock-springboot:${mongockVersion}"
  implementation "io.mongock:mongodb-springdata-v3-driver:${mongockVersion}"

  // Sentry reporting
  implementation "io.sentry:sentry-spring-boot-starter:6.18.1"

  // Amazon AWS
  implementation "io.awspring.cloud:spring-cloud-starter-aws-messaging"
  implementation "com.amazonaws:aws-xray-recorder-sdk-spring:2.14.0"

  // Rabbit MQ
  implementation "org.springframework.boot:spring-boot-starter-amqp"
}

checkstyle {
  config = resources.text.fromArchiveEntry(configurations.checkstyle[0], "google_checks.xml")
}

jacocoTestReport {
  reports {
    html.required = true
    xml.required = true
  }
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
    vendor = JvmVendorSpec.ADOPTIUM
  }
}

sonarqube {
  properties {
    property "sonar.host.url", "https://sonarcloud.io"
    property "sonar.login", System.getenv("SONAR_TOKEN")
    property "sonar.organization", "health-education-england"
    property "sonar.projectKey", "Health-Education-England_TIS-TRAINEE-DETAILS"

    property "sonar.java.checkstyle.reportPaths",
      "build/reports/checkstyle/main.xml,build/reports/checkstyle/test.xml"
  }
}

test {
  finalizedBy jacocoTestReport
  useJUnitPlatform()
}
